package seminarTwo.decorator;

public interface Drawable {
    void draw();
}
