package seminarTwo.decorator;

public class Triangle implements Drawable {
    @Override
    public void draw() {
        System.out.println("Draw triangle.");
    }
}
