package seminarTwo.observer;

public interface IObserver {
    void update(String message);
}
